--- a/tests/gama-local/input/Makefile.am
+++ b/tests/gama-local/input/Makefile.am
@@ -1,19 +1,16 @@
+# REMOVED in 2.16
+#  zoltan-test_3d_dms.gkf    zoltan-test_3d_dms.xml zoltan-test_3d_dms.yaml \
+#  zoltan-test_3d_gon.gkf    zoltan-test_3d_gon.xml \
+#
 EXTRA_DIST = \
   gama-local.gkf            gama-local.xml \
-  tst-tetrahedron-1.gkf     tst-tetrahedron-1.xml \
-  tst-tetrahedron-2.gkf     tst-tetrahedron-2.xml \
-  tst-tetrahedron-3-deg.gkf tst-tetrahedron-3-deg.xml \
-  tst-tetrahedron-3-gon.gkf tst-tetrahedron-3-gon.xml \
   zoltan-test_2d_dms.gkf    zoltan-test_2d_dms.xml \
   zoltan-test_2d_gon.gkf    zoltan-test_2d_gon.xml zoltan-test_2d_gon.yaml \
-  zoltan-test_3d_dms.gkf    zoltan-test_3d_dms.xml zoltan-test_3d_dms.yaml \
-  zoltan-test_3d_gon.gkf    zoltan-test_3d_gon.xml \
   scale-cov-gon.gkf \
   scale-cov-dms.gkf \
   fixed-constrained.gkf \
   jezerka-ang.gkf           jezerka-ang.xml    jezerka-ang.yaml \
   jezerka-dir.gkf           jezerka-dir.xml    jezerka-dir.yaml \
-  krasovsky-1926.gkf        krasovsky-1926.xml \
   fixed-azimuth.gkf         fixed-azimuth.xml \
   azimuth-angle.gkf         azimuth-angle.xml \
   azimuth-azimuth.gkf       azimuth-azimuth.xml \
@@ -22,8 +19,6 @@ EXTRA_DIST = \
   triangle-2.gkf            triangle-2.xml \
   stroner-levelling-a.gkf   stroner-levelling-a.xml \
   stroner-levelling-b.gkf   stroner-levelling-b.xml \
-  extern-tst-tetrahedron-3-gon.gkf \
-  extern-tst-tetrahedron-3-gon.xml \
   extern-azimuth-distance.gkf \
   extern-azimuth-distance.xml \
   extern-seq-dsuloha-d.gkf \
@@ -31,14 +26,8 @@ EXTRA_DIST = \
   gama-local-nop.gkf \
   gama-local-par.gkf \
   gama-local-deprecated.gkf \
-  local_3d.gkf \
+  local_3d.gkf local_3d.xml \
   skorepa-dusek.gkf \
-  bug-2019-08-06-integer-coordinates.gkf \
-  bug-2019-08-06-integer-coordinates.xml \
-  bug-2019-08-13-traverse-knin_male.gkf \
-  bug-2019-08-13-traverse-knin_male.xml \
-  bug-2019-08-20-knin_test.gkf \
-  bug-2019-08-20-knin_test.xml \
   seq-dsuloha-d.gkf   seq-dsuloha-d.xml   seq-dsuloha-d.yaml \
   mikhail-7.4.gkf     mikhail-7.4.xml     mikhail-7.4.yaml \
   mikhail-7.4-cov.README \
@@ -47,4 +36,32 @@ EXTRA_DIST = \
   geodet-pc-218.gkf   geodet-pc-218.xml   geodet-pc-218.yaml \
   tetrahedron.gkf     tetrahedron.xml     tetrahedron.yaml   tetrahedron.m \
   cube-1.gkf          cube-1.xml          cube-1.yaml        cube-1.m \
-  minimal.gkf         minimal.xml         minimal.yaml
+  minimal.gkf         minimal.xml         minimal.yaml \
+  \
+  bug/2019-08-06-integer-coordinates.gkf \
+  bug/2019-08-06-integer-coordinates.xml \
+  bug/2019-08-13-traverse-knin_male.gkf \
+  bug/2019-08-13-traverse-knin_male.xml \
+  bug/2019-08-20-knin_test.gkf \
+  bug/2019-08-20-knin_test.xml \
+  bug/tst-tetrahedron-1.gkf \
+  bug/tst-tetrahedron-1.xml \
+  bug/tst-tetrahedron-2.gkf \
+  bug/tst-tetrahedron-2.xml \
+  bug/tst-tetrahedron-3-deg.gkf \
+  bug/tst-tetrahedron-3-deg.xml \
+  bug/tst-tetrahedron-3-gon.gkf \
+  bug/tst-tetrahedron-3-gon.xml \
+  bug/extern-tst-tetrahedron-3-gon.gkf \
+  bug/extern-tst-tetrahedron-3-gon.xml \
+  bug/krasovsky-1926.gkf \
+  bug/krasovsky-1926.xml \
+  \
+  ctu/2020-barta-phase_0-1TK.gkf \
+  ctu/2020-barta-phase_0-1TK.xml \
+  ctu/2020-barta-phase_0-2TK.gkf \
+  ctu/2020-barta-phase_0-2TK.xml \
+  ctu/2020-barta-phase_1-1TK.gkf \
+  ctu/2020-barta-phase_1-1TK.xml \
+  ctu/2020-barta-phase_1-2TK.gkf \
+  ctu/2020-barta-phase_1-2TK.xml
