--- a/.gitignore
+++ b/.gitignore
@@ -75,12 +75,12 @@ doc/gama.t2p
 doc/gama.t2d
 doc/gama.dvi
 #
-bin/gama-g3
-bin/gama-local
-bin/gama-local-xml2txt
-bin/gama-local-xml2sql
-bin/gama-local-yaml2gkf
-bin/gama-local-gkf2yaml
+src/gama-g3
+src/gama-local
+src/gama-local-xml2txt
+src/gama-local-xml2sql
+src/gama-local-yaml2gkf
+src/gama-local-gkf2yaml
 scripts/ellipsoids_xml
 scripts/gnu_gama_dep
 scripts/slovnikar
