--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -49,7 +49,7 @@ download-gendocs.sh:
 	chmod +x gendocs.sh
 
 run-gendocs.sh:
-	@top_builddir@/bin/gama-local | sed s/@/@@/ > gama-local-help.texi
+	@top_builddir@/src/gama-local | sed s/@/@@/ > gama-local-help.texi
 	make info
 	rm -rf manual
 	./gendocs.sh --texi2html --email cepek@gnu.org gama "GNU Gama manual"
