--- a/Makefile.am
+++ b/Makefile.am
@@ -4,4 +4,4 @@ EXTRA_DIST = autogen.sh ChangeLog.1 ChangeLog.2 \
     HACKING.md Doxyfile gama.dox CMakeLists.txt \
     m4/README m4/ax_cxx_compile_stdcxx.m4 m4/ax_cxx_compile_stdcxx.m4
 
-SUBDIRS = lib bin doc scripts xml tests
+SUBDIRS = lib src doc scripts xml tests
