add test suite examples by Friedhelm Krumm Geodetic Network Adjustment Examples, Geodätisches Institut Universität Stuttgart, 2020

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ tests/gama-local/scripts/check_xml_coordinates
 tests/gama-local/scripts/sqlite_init_db
 tests/gama-local/xmllint-gama-local-xsd
 tests/gama-local/xmllint-gama-local-adjustment-xsd
+tests/krumm/cmp_xml_file
 #
 doc/version.texi
 doc/gama.html
